# RayTracer

./: .gitignore  CMakeLists.txt  README.md  script.sh
include/: Background.h  Bitmap.h  Light.h  Primitive.h  Ray.h  Sphere.h  Tracer.h  Triangle.h  vec3.h
src/: Bitmap.cpp  Ray.cpp  RayTracer.cpp  Sphere.cpp  Tracer.cpp  Triangle.cpp
